# simplecontext

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: demo.py
src/: __init__.py  errors.py  memory.py  modes.py  simplecontext.py  storage.py
tests/: test_simple.py
